Add ferro-capsicumium block and items - Add Ferro-Capsicumium Nugget - Add Ferro-Capsicumium Ingot - Add Block of Ferro-Capsicumium - Add recipe of capsaicin powder - Add recipes for ferro-capsicumium items

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@
 ### Added
 - Add chili plant biofuel that can be used as fuel in furnaces.
 - Add item tag `chilibulletweapons:chili_biomass`.
+- Add ferro-capsicumium nugget, ferro-capsicumium ingot, and block of ferro-capsicumium.
 
 ### Changed
 - Hot chili sauce now gives slowness and blindness effects for 2 seconds when used on a mob.
