Add ferro-capsicumium shovel and hoe

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,13 +2,17 @@
 [CBW Chili Peppers and Foods](https://github.com/Iunius118/CBWChiliPeppersAndFoods).
 
 ## [Unreleased]
+
+## [1.1.0]
 ### Added
 - Add chili plant biofuel that can be used as fuel in furnaces.
 - Add item tag `chilibulletweapons:chili_biomass`.
+- Add capsaicin powder recipe
 - Add ferro-capsicumium nugget, ferro-capsicumium ingot, and block of ferro-capsicumium.
+- Add ferro-capsicumium shovel and hoe.
 
 ### Changed
-- Hot chili sauce now gives slowness and blindness effects for 2 seconds when used on a mob.
+- Using hot chili sauce on a mob now applies slowness and blindness effects for 2 seconds.
 
 ### Fixed
 - Fix title of mod creative mode tab.
