--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,8 +6,8 @@
 - Add chili plant biofuel that can be used as fuel in furnaces.
 - Add item tag `chilibulletweapons:chili_biomass`.
 - Add capsaicin powder recipe
-- Add ferro-capsicumium nugget, ferro-capsicumium ingot, and block of ferro-capsicumium.
-- Add ferro-capsicumium shovel and hoe.
+- Add ferro-capsicumium nugget, ingot and block.
+- Add ferro-capsicumium shovel, axe and hoe.
 
 ### Changed
 - Hot chili sauces can now be thrown like splash potions with slowness and blindness effects for 2 seconds.
