--- a/languages/v1/assets/cbwchilipeppersandfoods/lang/en_us.json
+++ b/languages/v1/assets/cbwchilipeppersandfoods/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "block.chilibulletweapons.chili_pepper": "Chili Pepper Crops (CBW)",
   "block.chilibulletweapons.curved_chili_string": "String of Curved Chili Peppers",
+  "block.chilibulletweapons.ferrocapsicumium_block": "Block of Ferro-Capsicumium",
   "block.chilibulletweapons.hot_sauce_barrel": "Barrel of Hot Chili Sauce",
   "item.chilibulletweapons.capsaicin_powder": "Capsaicin Powder",
+  "item.chilibulletweapons.chili_biofuel": "Chili Plant Biofuel",
   "item.chilibulletweapons.chili_chicken_sandwich": "Chili Chicken Sandwich",
   "item.chilibulletweapons.chili_chocolate": "Chili Chocolate",
   "item.chilibulletweapons.chili_chocolate_chicken": "Chicken with Chili Chocolate Sauce",
@@ -14,6 +16,12 @@
   "item.chilibulletweapons.curved_chili_sack": "Sack of Curved Chili Peppers",
   "item.chilibulletweapons.curved_green_chili": "Curved Green Chili Pepper",
   "item.chilibulletweapons.dried_curved_chili": "Dried Curved Chili Pepper",
+  "item.chilibulletweapons.ferrocapsicumium_axe": "Ferro-Capsicumium Axe",
+  "item.chilibulletweapons.ferrocapsicumium_hoe": "Ferro-Capsicumium Hoe",
+  "item.chilibulletweapons.ferrocapsicumium_ingot": "Ferro-Capsicumium Ingot",
+  "item.chilibulletweapons.ferrocapsicumium_nugget": "Ferro-Capsicumium Nugget",
+  "item.chilibulletweapons.ferrocapsicumium_shears": "Ferro-Capsicumium Shears",
+  "item.chilibulletweapons.ferrocapsicumium_shovel": "Ferro-Capsicumium Shovel",
   "item.chilibulletweapons.fried_chili_pepper": "Fried Chili Pepper",
   "item.chilibulletweapons.green_hot_sauce": "Green Hot Chili Sauce",
   "item.chilibulletweapons.half_chili_chicken_sandwich": "Half-sized Chili Chicken Sandwich",
@@ -23,5 +31,5 @@
   "item.chilibulletweapons.hot_sauce": "Hot Chili Sauce",
   "item.chilibulletweapons.pasta_oil_and_chili": "Pasta Olio e Peperoncino",
   "item.chilibulletweapons.pickled_green_chili": "Pickled Green Chili Pepper",
-  "itemGroup.chilibulletweapons.main": "CBW Chili Peppers and Foods"
+  "itemGroup.cbwchilipeppersandfoods.main": "CBW Chili Peppers and Foods"
 }
